# remcu-chip-sdks

./: .gitmodules  CMakeLists.txt
.github/workflows/: raspberry_pi_armv6_bcm2708.yml  raspberry_pi_armv8_bcm2710.yml
stm32/: CMakeLists.txt
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/: CMakeLists.txt
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/CMakeLists/: Makefile  stm32f10x.cmake
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/CM3/CoreSupport/: core_cm3.c  core_cm3.h
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/Libraries/STM32F10x_StdPeriph_Driver/inc/: stm32f1xx_hal_conf.h.txt
stm32/stm32f10X/STM32F10x_StdPeriph_Lib_V3.5.0/Project/STM32F10x_StdPeriph_Template/: main.c  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h  system_stm32f10x.c
stm32/stm32g4xx/: CMakeLists.txt
stm32/stm32g4xx/stm32g431/: CMakeLists.txt
stm32/stm32g4xx/stm32g431/Libraries/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
stm32/stm32g4xx/stm32g431/Libraries/CMSIS/Include/: core_cm4.h
stm32/stm32g4xx/stm32g431/STM32G431/: CMakeLists.txt  Makefile  conf.cpp
stm32/stm32g4xx/stm32g431/STM32G431/test/TIM6/: main.c
